# HandPlusPlus

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/: copilot-instructions.md
crates/action-executor/: Cargo.toml
crates/action-executor/src/: lib.rs
crates/binding-engine/: Cargo.toml
crates/binding-engine/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/handplusplus/: Cargo.toml
crates/handplusplus/src/: main.rs
crates/input-capture/: Cargo.toml
crates/input-capture/src/: lib.rs
crates/palette-ui/: Cargo.toml
crates/palette-ui/src/: lib.rs
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md
docs/research/: platform-input-apis.md
docs/setup/: nix-environment.md
