[workspace]
members = [
    "crates/handplusplus",
    "crates/input-capture",
    "crates/action-executor",
    "crates/binding-engine",
    "crates/palette-ui",
    "crates/config",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HandPlusPlus Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/HandPlusPlus"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for future config files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific (used by individual crates)
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
x11rb = { version = "0.13", features = ["all-extensions"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev mode
