[package]
name = "action-executor"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { workspace = true }
